--- a/site-agence-immobili-re/style.css
+++ b/site-agence-immobili-re/style.css
@@ -134,7 +134,7 @@ main{
     text-align: center;
     font-style: italic;
 }
-
+/*-----style card categories---*/
 .card {
     
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -298,17 +298,19 @@ main{
 
 /*.....footer...*/
   footer{
+    color:black;
     padding-left:10rem;
     margin-top:10rem;
     padding:3rem;
     font-size: 1.2rem;
     list-style-type: none;
-    color:white;
-    background-color: rgb(105, 138, 113);
+    background: rgb(85,110,97);
+    background: linear-gradient(0deg, rgba(85,110,97,1) 4%, rgba(244,242,236,1) 90%);
 }
 
 footer a{
-    color:white;
+    color:rgb(0, 0, 0);
+   
 }
 footer a:hover{
   font-weight: bolder;
@@ -355,7 +357,7 @@ footer i{
         margin-bottom: 3rem;
         color:white;
     }
-
+/*-----style subtilte---*/
     .début{
     padding-bottom: 1rem;
     border-bottom:3px solid rgb(38, 155, 129);
@@ -366,51 +368,70 @@ footer i{
     .main{
         margin:6rem 5rem;
     }
-
+   
+   /*--------card product----*/
+    .products{
+        margin:4rem 5rem;
+        display:grid;
+        justify-content: center;
+        grid-template-columns: auto auto auto;
+        grid-gap:2rem;
+      }
     .card2 {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 300px;
-       
-        margin: auto;
-        text-align: center;
-        font-family: arial;
+        border-radius: 3rem 0rem 3rem 0rem ;
+        color: rgb(63, 58, 58);
+        position: relative;
+        
+        
         
       }
-      .card2 img:hover {
+      .card2 h4,p{
+          padding: 0em 1em;
+      }
+      .card2 img{
+        border-top-left-radius: 3rem;
+        width:100%;
+        height:16rem;
+        
+
+      }
+      .card2:hover {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        max-width: 300px;
-        height:100%;
-        margin: auto;
+        transform: scale(1.02);
+
         filter: brightness(60%);
-        transform: scale(1.05);
       }
-      
+      .contain-price{
+
+    position: absolute;
+    width: 100%;
+    margin-top:-3rem;
+    background-color: rgba(0,0,0,0.5);
+    color:rgb(236, 222, 222);
+    padding:0.5em;
+    
+    
+      }
       .price {
-        color: grey;
-        font-size: 22px;
+        color: rgb(231, 210, 158);
+        font-weight: bolder;
+      
+        
       }
       
-      .card2 button {
-        margin-top: 2rem;
-        border: none;
-        outline: 0;
-        padding: 12px;
-        color: white;
-        background-color: #000;
-        text-align: center;
-        cursor: pointer;
-        width: 100%;
-        font-size: 18px;
+      .card2 .desc{
+          padding:1em;
+          display: flex;
+          justify-content: space-between;
+          font-size: 0.9rem;
+
+
       }
-      
-      .card2 button:hover {
-        border:2px solid black;
-        background-color: rgb(194, 226, 219);
-        color:black;
-      
+      .card2 .desc i{
+          color:rgb(38, 129, 76)
       }
-  .products{
-    margin:2rem 4rem;
-    display:grid;
-    grid-template-columns: auto auto auto auto;
-  }
+     
+      
+      
+     
