--- a/site-agence-immobili-re/stylecontact.css
+++ b/site-agence-immobili-re/stylecontact.css
@@ -1,46 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&display=swap');
 
+
+.contactbg{
+    background-image: url(image/immobilier.jpg);
+    padding: 0.5rem;
+    
+
+}
+.contactbg .subtitle{
+text-align: left;
+padding-left: 3rem;
+}
 /*...formulaire de contact...*/
 .containercontact{
-    padding: 2rem 0rem; 
-    background-image: url(image/immobilier.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'Lato', sans-serif;
     font-size:1.2rem;
+    color: white;
+    font-weight: bolder;
 }
 .contact{
-    
-    
+    padding:2rem;
     display:grid;
     grid-template-columns: auto auto;
     justify-content: center;
     grid-gap:20rem;
-    margin:2rem 6rem;
+    margin:1rem 6rem;
     color: black;
   
 }
-.formulaire form input,textarea{
-    border-radius: 1rem;
-    background-color: rgba(240, 239, 239, 0.3);
-    width:70%;
+.formulaire{
+    position: relative;
+    margin-top: -6rem;
+    padding:4rem 4rem;
+    background-color: rgb(15, 18, 29);
+    display: flex;
+    justify-content: center;
+}
+.formulaire form input, .formulaire form textarea{
+    border-radius: 0.8rem;
+    width:100%;
     color: black;
-    margin:2px;
-    padding: 1rem 3rem;
+    margin:3px;
+    padding: 1em 1rem;
     border-bottom:1px solid black;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 4px 0 rgba(243, 241, 241, 0.2);
+    font-family: 2rem;
 
 }
+
 .formulaire form input[type="boutton"]{
- background-color: black;
+ background-color: rgba(32, 136, 150, 0.7);
+
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ margin-right:auto;
 
 }
 
 .coordonnées i{
-   color: black;
+   color: rgba(32, 136, 150, 0.7);
    margin-right:1rem;
+   box-shadow: rgba(0,0,0,0.2);
 }
 
 .coordonnées{
@@ -54,18 +76,18 @@
   #Envoyer{
      
      width: 20vh;
-     
+     background-color: rgba(142, 189, 196, 0.7);
+
      font-weight:bold;
      padding: 1rem;
      cursor: pointer;
      box-shadow: 0 8px 5px 0 rgba(0,0,0,0.2);
-     background-color: transparent;
     color: black;
     border:1px solid black;
  }
   
  #Envoyer:hover{    
-    background-color:rgb(1, 3, 3);
+    background-color:black;
     color:white;
  }
 
